Brinda | horizental bar of random number with different dencity of blue colour

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>number visualization</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>practice</title>
+	<link rel="stylesheet" type="text/css" href="css/basic.css">
 </head>
 <body>
 	<script type="text/javascript" src="javascript/d3.v4.min.js"></script>
-	<script type="text/javascript" src="javascript/visualize.js"></script>
-	<center><h1>Random Number Visualization</h1></center>
-	<div class="container"></div>
+	<script type="text/javascript" src="javascript/basic.js"></script>
+	<div class="bar_container"></div>
 </body>
 </html>
